--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,14 @@
-aiofiles
-aiohttp
-asyncio
-dnspython
-ffmpeg-python
-gitpython
-hachoir
-heroku3
-lyricsgenius
-motor==3.0.0
-pillow==9.5.0
+asyncio==3.4.3
+aiofiles==23.2.1
+aiohttp==3.9.3
+numpy==1.26.4
+pillow==10.2.0
 psutil
-py-tgcalls==0.8.6
-pykeyboard
-pyrogram==1.4.16
-python-dotenv
-pyyaml==5.3.1
-requests
-speedtest-cli
-spotipy
-tgcrypto
-youtube-search
-youtube-search-python
-git+https://github.com/yt-dlp/yt-dlp.git
+pyrogram==2.0.106
+py-tgcalls==0.9.7
+python-dotenv==1.0.1
+tgcrypto==1.2.5
+speedtest-cli==2.1.3
+git+https://github.com/yt-dlp/yt-dlp@master
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
